--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.3.50'
+    id 'maven'
 }
 
 group 'com.github.mslenc'
-version '0.1-SNAPSHOT'
+version '0.7.0'
 
 sourceCompatibility = 1.8
 
