--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 group 'com.github.mslenc'
-version '0.7.0'
+version '0.8.0'
 
 sourceCompatibility = 1.8
 
@@ -46,4 +46,6 @@ artifacts {
 
 test {
     useJUnitPlatform()
+    minHeapSize = "8192M"
+    maxHeapSize = "8192M"
 }
