--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,14 @@ plugins {
 }
 
 group 'com.github.mslenc'
-version '0.10.2'
+version '0.10.3'
 
 sourceCompatibility = 1.8
 
 repositories {
     mavenLocal()
     mavenCentral()
+    maven { url "https://jitpack.io" }
 }
 
 publishing {
