--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
-    ext.jackson_version = '2.16.1'
-    ext.kotlin_version = '1.9.23'
+    ext.jackson_version = '2.17.2'
+    ext.kotlin_version = '2.0.10'
+    ext.coroutines_version = '1.8.1'
 }
 
 plugins {
@@ -11,7 +12,7 @@ plugins {
 }
 
 group 'io.github.mslenc'
-version '0.13.4'
+version '0.14.0'
 
 repositories {
     mavenLocal()
@@ -21,7 +22,7 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.8.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
 
     implementation "com.fasterxml.jackson.core:jackson-databind:$jackson_version"
@@ -30,7 +31,7 @@ dependencies {
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jdk8:$jackson_version"
     implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:$jackson_version"
 
-    implementation "io.github.mslenc:utilsktx:1.5.3"
+    implementation "io.github.mslenc:utilsktx:1.6.0"
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
